src/test/deca/syntax/invalid/created/testPresentation/testP.deca
{
    //int x = 12345678901234567890;
    //float y = 1234567890123456700000000089000987654321.0987654321;
    //float toZ = 0.0000000000000000000000000000000000000000000000000002;
}